--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,7 +3,10 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 brew "fortune"
+brew "neovim"
 brew "python"
+brew "tmux"
+brew "trash"
 brew "yarn"
 brew "aws/tap/aws-sam-cli"
 cask "java"
