--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -4,4 +4,8 @@
 
 [github]
   user = SamTolmay
-
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
