update vscode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -12,7 +12,7 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[json]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
+        "editor.defaultFormatter": "vscode.json-language-features"
     },
     "[jsonc]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -26,44 +26,48 @@
     "editor.autoClosingBrackets": "never",
     "typescript.suggest.autoImports": false,
     "yaml.customTags": [
-        "!And",
-        "!And sequence",
-        "!If",
-        "!If sequence",
-        "!Not",
-        "!Not sequence",
-        "!Equals",
-        "!Equals sequence",
-        "!Or",
-        "!Or sequence",
-        "!FindInMap",
-        "!FindInMap sequence",
-        "!Base64",
-        "!Join",
-        "!Join sequence",
-        "!Cidr",
-        "!Ref",
-        "!Sub",
-        "!Sub sequence",
-        "!GetAtt",
-        "!GetAZs",
-        "!ImportValue",
-        "!ImportValue sequence",
-        "!Select",
-        "!Select sequence",
-        "!Split",
-        "!Split sequence"
+      "!And",
+      "!And sequence",
+      "!If",
+      "!If sequence",
+      "!Not",
+      "!Not sequence",
+      "!Equals",
+      "!Equals sequence",
+      "!Or",
+      "!Or sequence",
+      "!FindInMap",
+      "!FindInMap sequence",
+      "!Base64",
+      "!Join",
+      "!Join sequence",
+      "!Cidr",
+      "!Ref",
+      "!Sub",
+      "!Sub sequence",
+      "!GetAtt",
+      "!GetAZs",
+      "!ImportValue",
+      "!ImportValue sequence",
+      "!Select",
+      "!Select sequence",
+      "!Split",
+      "!Split sequence"
     ],
     "cfnLint.validateUsingJsonSchema": false,
     "yaml.validate": false,
     "cSpell.userWords": [
-        "concat",
-        "heatmap",
-        "imdb",
-        "lowdefy",
-        "memoized",
-        "metacritic",
-        "nunjucks"
+      "Subblocks",
+      "concat",
+      "heatmap",
+      "iframe",
+      "imdb",
+      "lowdefy",
+      "memoized",
+      "metacritic",
+      "microchart",
+      "nunjucks",
+      "rgba"
     ],
     "javascript.format.enable": false,
     "prettier.requireConfig": true,
@@ -71,5 +75,12 @@
     "editor.acceptSuggestionOnCommitCharacter": false,
     "eslint.alwaysShowStatus": true,
     "[lisp]": {},
-    "editor.acceptSuggestionOnEnter": "off"
+    "editor.acceptSuggestionOnEnter": "off",
+    "mdb.confirmRunAll": false,
+    "mdb.useDefaultTemplateForPlayground": false,
+    "editor.wordWrap": "on",
+    "editor.detectIndentation": false,
+    "files.associations": {
+      "*.njk": "yaml"
+    }
 }
