--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,91 +1,49 @@
 {
-    "editor.tabSize": 2,
-    "editor.fontLigatures": true,
-    "editor.fontFamily": "JetBrains Mono",
-    "editor.fontWeight": "bold",
-    "editor.fontSize": 14,
-    "workbench.colorTheme": "One Dark Pro",
-    "workbench.tree.indent": 12,
-    "workbench.startupEditor": "newUntitledFile",
-    "editor.minimap.enabled": false,
-    "[javascript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[json]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    "[jsonc]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[yaml]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "javascript.updateImportsOnFileMove.enabled": "never",
-    "explorer.confirmDragAndDrop": false,
-    "javascript.suggest.autoImports": false,
-    "editor.autoClosingBrackets": "never",
-    "typescript.suggest.autoImports": false,
-    "yaml.customTags": [
-      "!And",
-      "!And sequence",
-      "!If",
-      "!If sequence",
-      "!Not",
-      "!Not sequence",
-      "!Equals",
-      "!Equals sequence",
-      "!Or",
-      "!Or sequence",
-      "!FindInMap",
-      "!FindInMap sequence",
-      "!Base64",
-      "!Join",
-      "!Join sequence",
-      "!Cidr",
-      "!Ref",
-      "!Sub",
-      "!Sub sequence",
-      "!GetAtt",
-      "!GetAZs",
-      "!ImportValue",
-      "!ImportValue sequence",
-      "!Select",
-      "!Select sequence",
-      "!Split",
-      "!Split sequence"
-    ],
-    "cfnLint.validateUsingJsonSchema": false,
-    "cSpell.userWords": [
-      "Dataloader",
-      "Subblocks",
-      "concat",
-      "heatmap",
-      "iframe",
-      "imdb",
-      "lowdefy",
-      "memoized",
-      "metacritic",
-      "microchart",
-      "nunjucks",
-      "rgba"
-    ],
-    "javascript.format.enable": false,
-    "prettier.requireConfig": true,
-    "editor.formatOnSave": true,
-    "editor.acceptSuggestionOnCommitCharacter": false,
-    "eslint.alwaysShowStatus": true,
-    "[lisp]": {},
-    "editor.acceptSuggestionOnEnter": "off",
-    "mdb.confirmRunAll": false,
-    "mdb.useDefaultTemplateForPlayground": false,
-    "editor.wordWrap": "on",
-    "editor.detectIndentation": false,
-    "files.associations": {
-      "*.njk": "yaml"
-    },
-    "files.trimTrailingWhitespace": true,
-    "yaml.validate": false,
-    "prettier.packageManager": "yarn",
-    "eslint.packageManager": "yarn",
-    "json.format.enable": false,
+  "editor.tabSize": 2,
+  "editor.inlineSuggest.enabled": true,
+  "editor.formatOnSave": true,
+  "editor.autoClosingBrackets": "never",
+  "editor.autoClosingDelete": "never",
+  "editor.autoClosingOvertype": "never",
+  "editor.autoClosingQuotes": "never",
+  "eslint.packageManager": "yarn",
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "files.associations": {
+    "*.yaml.njk": "jinja-yaml",
+    "*.html.njk": "jinja-html"
+  },
+  "github.copilot.enable": {
+    "*": true,
+    "yaml": true,
+    "plaintext": false,
+    "markdown": false
+  },
+  "javascript.format.enable": false,
+  "javascript.updateImportsOnFileMove.enabled": "never",
+  "json.format.enable": false,
+  "prettier.requireConfig": true,
+  "redhat.telemetry.enabled": false,
+  "yaml.format.singleQuote": true,
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
+  "cSpell.userWords": ["Lowdefy"],
+  "yaml.validate": false,
+  "workbench.editor.enablePreview": false,
+  "workbench.colorTheme": "GitHub Light",
+  "workbench.preferredDarkColorTheme": "One Dark Pro Darker",
+  "workbench.preferredLightColorTheme": "GitHub Light",
+  "window.autoDetectColorScheme": true,
+  "workbench.iconTheme": "vscode-icons-mac"
 }
